own login page and csrf working + added role table and custom roles(rights)

--- a/Server/src/main/resources/templates/home.html
+++ b/Server/src/main/resources/templates/home.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>HOME</title>
 </head>
 <body>
 <h1>HOME</h1>
+<label th:text="${_csrf.parameterName}"></label>
+<label th:text="${_csrf.token}"></label>
 </body>
 </html>
