--- a/Server/src/main/resources/templates/login.html
+++ b/Server/src/main/resources/templates/login.html
@@ -1,57 +1,15 @@
-<html>
-    <head>
-        <script type="text/javascript">
-            function setCookies() {
-                var d = new Date();
-                d.setTime(d.getTime() + (2*24*60*60*1000));
-                var expires = "expires=" + d.toGMTString();
-
-                var inputUsername = document.getElementById("username").value;
-                var inputPassword = document.getElementById("password").value;
-
-                document.cookie = "username=" + inputUsername + ";" + expires + ";path=/ ;secure ;SameSite=Strict";
-                document.cookie = "password=" + inputPassword + ";" + expires + ";path=/ ;secure ;SameSite=Strict";
-            }
-
-            function getCookie(cname) {
-                var name = cname + "=";
-                var ca = document.cookie.split(';');
-                for(var i = 0; i < ca.length; i++) {
-                    var c = ca[i];
-                    while (c.charAt(0) == ' ') {
-                        c = c.substring(1);
-                    }
-                    if (c.indexOf(name) == 0) {
-                        return c.substring(name.length, c.length);
-                    }
-                }
-                return "";
-            }
-
-            function checkCookie() {
-                var username = getCookie("username");
-                if (username != "") {
-                    window.location.href = "https://" + window.location.host + "/teilnahme";
-                    alert("You're already loggin as " + username);
-                } else {
-                    setCookies();
-                    window.location.href = "https://" + window.location.host + "/teilnahme";
-                }
-            }
-        </script>
-    </head>
-    <body>
-        <form>
-            <div class="container">
-                <div> <label><b>${params.name}, ${params.id}, ${params.txt}</b></label></div>
-                <label><b>Username</b></label>
-                <input type="text" placeholder="Enter Username" id="username" required>
-                <label><b>Password</b></label>
-                <input type="password" placeholder="Enter Password" id="password" required>
-                <button type="button" onclick="checkCookie()">
-                    Login
-                </button>
-            </div>
-        </form>
-    </body>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>Spring Security Example </title>
+</head>
+<body>
+<div th:if="${param.error}"> Invalid username and password. </div>
+<div th:if="${param.logout}"> You have been logged out. </div>
+<form th:action="@{/login}" method="post">
+    <div><label> User Name : <input type="text" name="username"/> </label></div>
+    <div><label> Password: <input type="password" name="password"/> </label></div>
+    <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
+    <div><input type="submit" value="Sign In"/></div>
+</form>
+</body>
 </html>
